--- a/.gitignore
+++ b/.gitignore
@@ -59,11 +59,11 @@ build-*/
 *.txt.user
 *.gch
 
-turtlebot3/*
-turtlebot3_bringup/*
-turtlebot3_description/*
-turtlebot3_example/*
-turtlebot3_navigation/*
-turtlebot3_slam/*
-turtlebot3_teleop/*
-turtlebot3_simulation/*
+turtlebot3/
+turtlebot3_bringup/
+turtlebot3_description/
+turtlebot3_example/
+turtlebot3_navigation/
+turtlebot3_slam/
+turtlebot3_teleop/
+turtlebot3_simulation/
